clusters/talos-cluster/dcgm-exporter/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dcgm-exporter-route
  namespace: monitoring
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - "dcgm.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dcgm-exporter
          port: 9400
